test/test027.compil.error
test/test027.test:2:7: error: syntax error, unexpected UNKNOWN_TOKEN, expecting TOK_END_INSTR
echo 6 $ + 7
       ^

